[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
chrono = "0.4.38"
itertools = "0.14.0"
regex = "1.12.2"
good_lp = { version = "1.14.2", features = ["all_default_solvers"] }
